--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Tracker</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <style>
+        body {
+          background-image: url('../Images/gym.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
+        }
+        </style>
 </head>
 <body>
     <div id="app"></div>
