--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <title>Fitness Tracker</title>
     <link rel="stylesheet" href="stylesheet.css">
     <style>
-        body {
+        /* body {
           background-image: url('../Images/gym.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
-        }
+        } */
         </style>
 </head>
 <body>
